--- a/java/projecttask14/style14.css
+++ b/java/projecttask14/style14.css
@@ -42,7 +42,7 @@
 
 @font-face {
   font-family: "Croissant One";
-  src: ("fonts/CroissantOne-Regular.ttf") format('truetype');
+  src: url("fonts/CroissantOne-Regular.ttf") format('truetype');
 }
 
 html {
